--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "interweave": "^12.5.0",
     "next": "9.5.5",
     "react": "16.13.1",
+    "react-countup": "^4.3.3",
     "react-dom": "16.13.1"
   }
 }
